--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0"
   },
